--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,1 +1,8 @@
-
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/multi_module_ex?zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&&serverTimezone=Asia/Seoul
+    username: ramos
+    password: test123
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 20
