--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -6,3 +6,9 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       maximum-pool-size: 20
+  jpa:
+    open-in-view: false
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: false
