--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -11,4 +11,5 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        format_sql: false
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQL5Dialect
